# OpencvTest

13viz/1LaunchingViz/: CMakeLists.txt  main.cpp
13viz/2PoseWidget/: CMakeLists.txt  main.cpp
1Introduction_opencv/: 1Introduction_opencv  1Introduction_opencv.cbp  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp
2Core/1Mat_test/: CMakeLists.txt  main.cpp
2Core/2ScanImage/: 2ScanImage  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp
2Core/3Mask/: CMakeLists.txt  main.cpp
2Core/4Operations/: CMakeLists.txt  main.cpp
2Core/5Adding/: CMakeLists.txt  main.cpp
2Core/6contrast_brightness/: CMakeLists.txt  main.cpp
2Core/7Foutier/: CMakeLists.txt  main.cpp
2Core/8FileInOut/: CMakeLists.txt  main.cpp  test.yml
2Core/9parallel/: CMakeLists.txt  main.cpp
3Image/10ThresholdingOperationsusinginRange/: CMakeLists.txt  main.cpp
3Image/1BasicDrawing/: CMakeLists.txt  main.cpp
3Image/2Randomgenerator/: CMakeLists.txt  main.cpp
3Image/3SmoothingImages/: CMakeLists.txt  main.cpp
3Image/4ErodingDilating/: CMakeLists.txt  main.cpp
3Image/5MoreMorphologTransformations/: CMakeLists.txt  main.cpp
3Image/6Hit-or-Miss/: CMakeLists.txt  main.cpp
3Image/7morphological operations/: CMakeLists.txt  main.cpp
3Image/8ImagePyramids/: CMakeLists.txt  main.cpp
3Image/9BasicThresholdingOperations/: CMakeLists.txt  main.cpp
4HighGUI/AddingaTrackbartoourapplications/: CMakeLists.txt  main.cpp
7calib3d/3RealTimeposeestimationofatexturedobject/: CMakeLists.txt  CMakeLists.txt~
7calib3d/3RealTimeposeestimationofatexturedobject/data/: cookies_ORB.yml
7calib3d/3RealTimeposeestimationofatexturedobject/src/: main_registration.cpp
7calib3d/Calibration/: CMakeLists.txt  main.cpp  test.cpp
7calib3d/Calibration/CameraCalibration/: calibdata.txt  caliberation_result.txt
8feature2d/1Harriscornerdetector/: CMakeLists.txt  main.cpp
8feature2d/2Shi-Tomasicornerdetector/: CMakeLists.txt  main.cpp
8feature2d/3Creatingyourowncornerdetector/: CMakeLists.txt  main.cpp
8feature2d/4Detectingcornerslocationinsubpixels/: CMakeLists.txt  main.cpp
8feature2d/6FeatureDescription/: CMakeLists.txt  main.cpp
8feature2d/7Homography/: CMakeLists.txt  QRcodeFind.cpp  boardchess.cpp  main.cpp
